Add Fabric + NeoForge support across MC 1.20.5-26.2, lower Bukkit floor to 1.8
Restructures the project around Stonecutter so one shared source tree builds
for every supported Minecraft version and loader.

Loaders (29 build nodes, all verified compiling and producing jars):
  - Fabric   1.20.5 -> 26.2  (18)
  - NeoForge 1.20.6 -> 26.2  (11)

All loader targets use Mojang mappings (loomx.applyMojangMappings() on Fabric,
native on NeoForge), so a single namespace spans the matrix - including the
26.x line, where Minecraft ships unobfuscated and Yarn no longer exists.
The former fabric/ module moved to src/ and was translated from Yarn to
Mojang names accordingly.

Version boundaries handled with Stonecutter directives:
  - CustomModelData int -> four lists          (1.21.4)
  - Registry.get -> getValue                   (1.21.2)
  - ClickEvent/HoverEvent -> sealed records    (1.21.5)
  - ResourceLocation -> Identifier             (1.21.11)
  - ClickType -> ContainerInput, int perms
    -> PermissionSet                           (26.1)
  - Java 21 -> Java 25                         (26.1)

Bukkit now targets Java 8 bytecode and api-version 1.13, so one jar loads from
1.8 through 26.2. Adds a Compat layer resolving materials across the 1.13
flattening, the glint enchantment (DURABILITY/UNBREAKING) and CustomModelData
(1.14+) reflectively. core is compiled to Java 8 for the same reason.

Fixes carried over from the in-progress Fabric port:
  - forward the mouse button through to click handlers, restoring
    right-click-to-remove and shift-right-click-to-clear (was left-click only)
  - apply bold/italic/underline via withBold/withItalic rather than withColor,
    which silently cleared the colour instead of applying the modifier
  - scope tag_item.hide to its config section, so hidden tags are hidden
  - read server_identifier as a long instead of truncating to int
  - implement CustomModelData, previously a no-op
  - guard GUI callbacks against the inventory not existi